fix : premiers test complet api script